--- a/P1/Int-Front_End/CSS_Aula/index.html
+++ b/P1/Int-Front_End/CSS_Aula/index.html
@@ -9,6 +9,14 @@
     
 </head>
 <body>
+
+    <div id="cardid" class="card principal">
+        <img src="IMG/Goku.jpg" alt="Foto de perfil" class="card_perfil_img" id="img-1"
+        width="200" height="200">
+        <h2>Um guerreiro das estrelas</h2>
+        <p>Luta pela própria satisfação</p>
+        <button class="card_seguir_btn" >Seguir</button>
+    </div>
     
 </body>
 </html>
